--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fisrt page</title>
 </head>
-<body>
-    <h1 style="background-color:firebrick;">Tomato</h1>
-    <h1><strong> tamir tamir</strong></h1>
-    <p>tamit tamir dddddd</p>
-    dsfsddsfsf
-    <p style="color:blue;">I am blue</p>
+<body style="text-align: center;">
+
+    <h1 style="background-color:firebrick;">first page</h1>
+    <a href="">link to the next page</a>
+
+    <h1><strong> </strong></h1>
+
+    <p style="color:blue;">pictures of differnet soccer balls</p>
+
     <img src="balls.messi.jpeg" alt="messi ball" >
-    <img src="ucl.ball.jpeg" alt="ucl ball" >
-    <img src="maccabi.ball.jpeg" alt="maccabi ball" >
+
     <br>
-    <img src="https://picsum.photos/200?random=1">
-    <img src="https://picsum.photos/200/300?grayscale">
+
+    <img src="ucl.ball.jpeg" alt="ucl ball" >
+
+    <br>
+
+    <img src="maccabi.ball.jpeg" alt="maccabi ball" >
+
+    <br><br>
+
+    <p style="color: blueviolet ;" >changing pic from picsum</p>
+
+    <img src="https://picsum.photos/200?random=1"alt="random pic" width="500" height="500">
+
+    <img src="https://picsum.photos/200/300?bluescale"alt="random pic" width="500" height="500">
+
+    <br>    
+    <a href="https://picsum.photos">link to picsum web</a>
+
+
+
 
     
 
